# judgeTriangle

./: CMakeLists.txt  Makefile  README.md  Triangle.cpp  Triangle.h  list.c  main.cpp  new.c  test.c  test.h
